Fixes a bug that hides the cover image on Firefox.

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -418,12 +418,10 @@ body {
     position: relative;
   	padding-bottom: 56.25%;
   	padding-top: $spacing-unit;
-  	height: 0;
   	overflow: hidden;
 
     img {
       width: 100%;
-      height: 100%;
       object-fit: cover;
     }
 
